<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Notification Drain</string>
    <string name="regex_filter">Regex Filter (<a href='http://developer.android.com/reference/java/util/regex/Pattern.html'>API</a>)</string>
    <string name="service_on">Drain Enabled</string>
    <string name="service_name" translatable="false">Notification Drain Service</string>
    <string name="regex_error">Invalid regex pattern.</string>
    <string name="service_help">This application only works if you enable it\'s notification access on phone settings.</string>
    <string name="notification_access">Enable Notification Access</string>
    <string name="regex_hint" translatable="false">.*</string>
    <string name="key_words">Key Words</string>
    <string name="key_word_hint">love</string>
    <string name="key_word_in">Contain</string>
    <string name="key_word_out">Forbidden</string>
    <string name="advanced_mode">Advanced Mode</string>
    <string name="basic_mode">Basic Mode</string>
    <string name="app_logo">Application logo.</string>
    <string name="key_word_error">Empty key word.</string>
    <string name="key_add">Add Key</string>
    <string name="key_remove">Remove </string>
    <string name="service_off">Drain Disabled</string>
</resources>
