<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.RegexNotificationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/regex_filter"
        android:id="@+id/tvFilter"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/btSwitchToBasicMode" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_off"
        android:id="@+id/cbService"
        android:checked="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_above="@+id/llNotificationAccess"
        android:layout_alignParentStart="false" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etFilter"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:scrollHorizontally="false"
        android:layout_below="@+id/tvFilter"
        android:hint="@string/regex_hint" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_mode"
        android:id="@+id/btSwitchToBasicMode"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="end"
        android:id="@+id/llNotificationAccess">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/service_help"
            android:id="@+id/tvNotificationHelp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_access"
            android:id="@+id/btNotificationAccess" />
    </LinearLayout>

</RelativeLayout>
